kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 80
# Для задания с *
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 80
        rewrite-target: /index.html
